--- a/src/i18n/zh/translation.json
+++ b/src/i18n/zh/translation.json
@@ -45,5 +45,9 @@
   "黑暗": "黑暗",
   "跟随系统": "跟随系统",
   "主题模式": "主题模式",
-  "主题色": "主题色"
+  "主题色": "主题色",
+  "语言": "语言",
+  "页面配置": "页面配置",
+  "请输入": "请输入",
+  "确认": "确认"
 }
